--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,7 +41,7 @@
 }
 
 /* TELA MOBILE*/
-@media screnn and (min-width : 1024px){
+@media screen and (min-width: 1024px){
 
 :root{  --biggest-font-size: 4rem;
   --h1-font-size : 2.25rem;
@@ -98,3 +98,154 @@ img{
 
 
 /* REUSABLE CSS CLASSES  */
+
+.container{
+max-width: 1024px;
+margin-inline: 1.5rem;
+}
+
+.grid{
+ display: grid;
+ gap: 1.5rem
+}
+
+.section{
+ padding-block: 5rem 1rem;
+}
+
+.section__title{
+ font-size: var(--h1-font-size);
+ font-family: var(--title-font);
+ margin-bottom: 1.5rem;
+}
+
+.section__subtitle{
+  display: block;
+  font-size: var(--h2-font-size);
+  font-family: var(--subtitle-font);
+  color: var(--first-color);
+  margin-bottom: .5rem;
+}
+
+
+.section__title, .section__subtitle{
+  text-align: center;
+}
+
+.main{
+  overflow: hidden; /* para o animation Scroll*/
+}
+
+
+/* HEADER E NAV */
+
+header{
+  position: fixed;
+  width: 100%;
+  background-color: var(--body-color);
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  transition: box-shadow .3s, background .4s;
+}
+
+.nav{
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo,
+.nav__toggle,
+.nav__close{
+  display: flex;
+  color: var(--title-color);
+}
+
+.nav__logo{
+  align-items: center;
+  column-gap: .5rem;
+  font-family: var(--title-font);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+  transition: color .3s;
+
+}
+
+.nav__logo img{
+  width: 25px;
+}
+
+.nav__logo:hover{
+  color: var(--first-color);
+}
+
+.nav__toggle{
+  cursor: pointer;
+  font-size: 1.25rem;
+}
+/* MENU MOBILE */
+
+@media screen and (max-width: 767px){
+.nav__menu{
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: var(--body-color);
+    width: 100%;
+    box-shadow: 0 8px 20px hsla(19, 64%, 24%, .1);
+    padding-block: 3.5rem;
+    transition: top .4s;
+
+  } 
+}
+/* FIM MENU MOBILE */
+
+.nav__list{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 2rem;
+
+}
+
+.nav__link{
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  transition: color .4s;
+}
+
+.nav__link:hover{
+  color: var(--first-color);
+
+}
+
+.nav__close{
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  cursor: pointer;  
+}
+
+.nav__img-1, .nav__img-2{
+  position: absolute;
+  opacity: .2;
+}
+
+.nav__img-1{
+  width: 100px;
+  top: .75rem;
+  left: -2rem;
+  transform: rotate(156deg);
+
+}
+
+.nav__img-2{
+  width: 50px;
+  right: -1rem;
+  bottom: 0;
+  transform: rotate(-30deg);
+}
