--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@
 
   /* COLORS */
   /* COLOR MODE HSL(hue , saturation, lightness) */
-  --first-color : hsl(19, 54% , 64%);
+  --first-color : hsl(19, 64% , 52%);
   --first-color-alt : hsl(19, 64%, 52%);
   --title-color : hsl(19, 16%, 15%);
   --text-color : hsl(19, 16%, 35%);
@@ -253,4 +253,98 @@ header{
 /* show menu */
 .show-menu{
   top: 0;
+}
+
+
+/* HOME */
+.home{
+  position: relative;
+}
+
+.home__container{
+  row-gap: 3rem;
+  padding-top: 2rem;
+}
+
+.home__img{
+  width: 300px;
+  justify-self: center;
+}
+
+.home_data{
+  text-align: center;
+}
+
+.home__title{
+  font-size: var(--biggest-font-size);
+  font-family: var(--title-font);
+  margin-bottom: 1rem;
+}
+
+.home__title img{
+  width: 40px;
+}
+
+.home__title div{
+  padding: 3px 0px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  column-gap: .5rem;
+}
+
+.home__description{
+  padding: 0 1rem;
+  margin-bottom: 2.5rem;
+}
+
+.home__leaf-1, .home__leaf-2{
+  position: absolute;
+  opacity: .2;
+}
+
+.home__leaf-1{
+  width: 80px;
+  top: 8rem;
+  left:-1rem;
+  transform: rotate(90deg);
+}
+
+
+.home__leaf-2{
+  width: 100px;
+  right: -2rem;
+  bottom: 1rem;
+  transform: rotate(-15deg);
+}
+
+
+/* BUTTON */
+
+.button{
+  
+  display: inline-flex;
+  column-gap: .5rem;
+  background-color: var(--first-color);
+  padding: 1rem 1.5rem;
+  border-radius: 4rem;
+  font-weight: var(--font-medium);
+  color: #fff;
+  transition: background .3s;
+  align-items: center;
+}
+
+.button i{
+  font-size: 1.5rem;
+  transition: transform .3s;
+}
+
+.button:hover{
+  background-color: var(--first-color-alt);
+
+}
+
+.button:hover i{
+  transform: translateX(.25rem);
+
 }
